[gd_scene load_steps=4 format=3 uid="uid://byjfpce33eavk"]

[ext_resource type="Script" uid="uid://c3l6dkvm4kva8" path="res://prog_122i.gd" id="1_61h06"]
[ext_resource type="Theme" uid="uid://chp13krld84ky" path="res://Biggish Font.tres" id="2_j4pkx"]
[ext_resource type="Theme" uid="uid://g8y3r3oufsf5" path="res://Big Font.tres" id="3_fx2ec"]

[node name="prog_122i" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_61h06")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 469.0
theme = ExtResource("2_j4pkx")

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 154.0
offset_top = 503.0
offset_right = 393.0
offset_bottom = 587.0
theme = ExtResource("3_fx2ec")
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 443.0
offset_top = 503.0
offset_right = 682.0
offset_bottom = 587.0
theme = ExtResource("3_fx2ec")
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 734.0
offset_top = 503.0
offset_right = 973.0
offset_bottom = 587.0
theme = ExtResource("3_fx2ec")
text = "Exit"

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
